Improvements and binary

--- a/lib/views/index.ejs
+++ b/lib/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JQuery JSONView</title>
+  <title>InspectWeb</title>
   <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
   <script type="text/javascript" src="jquery.jsonview.js"></script>
   <link rel="stylesheet" href="jquery.jsonview.css" />
@@ -45,6 +45,8 @@
   <div class="container">
     <div class="center-align">
       <h3>inspectweb</h3>
+      <a href="/">See list</a>
+      <hr />
     </div>
     <div class="center-align">
       <button class="btn waves-effect waves-light" id="collapse-btn">Collapse</button>
